--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@
 .pub-cache/
 .pub/
 /build/
-/images/
 
 # Android related
 **/android/**/gradle-wrapper.jar
@@ -69,3 +68,6 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Dummy imges
+dummy_images
